fix: restore main to correct 2.0.0 state undo damage from erroneous rever