@@ -11,6 +11,8 @@ import java.io.OutputStream;
 import java.io.StreamTokenizer;
 import java.io.StringReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
@@ -354,7 +356,12 @@ class DatatypeConverterTests extends TestBase {
 	}
 
 	private HttpURLConnection getUrlConnection() throws IOException {
-		URL url = new URL(base);
+		URL url;
+		try {
+			url = new URI(base).toURL();
+		} catch (URISyntaxException e) {
+			throw new IOException(e.getMessage(), e);
+		}
 		HttpURLConnection con = (HttpURLConnection) url.openConnection();
 		con.setRequestMethod("POST");
 		con.setDoInput(true);
